Cleaned up CSS and HTML by including 'aside' elements. New problem now: active links within 'aside' elements no longer appear brown, they are all white (invisible against background).

--- a/css/global.css
+++ b/css/global.css
@@ -111,7 +111,7 @@ body {
 
 .container {
 	margin: 0 auto;
-	padding: 0;
+	padding: 0 1em;
 	max-width: 990px;
 	min-width: 480px;
 }
@@ -197,6 +197,7 @@ nav {
 
 .nav-list {
 	margin: 0;
+	float: right;
 }
 
 .nav-list li {
@@ -259,32 +260,33 @@ nav a:hover, nav a:active {
 
 
 
-/****************************** Content ***********************************/
+/****************************** Main Content ***********************************/
 
 .contentleft {
-	width: 65%;
+	width: 70%;
 	float: left;
 }
 
-.content-inner {
-	width: auto;
-	margin: 1.5em 0 2em;
-}
-
-.content-inner a {
-	color: #600;
-	font: bold;
-	text-decoration: none;
-}
-
 .contentright {
-	width: 35%;
+	width: 30%;
 	color: #000;
 	float: left;
 }
 
-.content-inner-right {
+.content-inner, aside {
+	width: auto;
+	margin: 1.5em 0 2em;
+}
+
+aside {
 	margin-left: 3em;
+}
+
+.content-inner a,
+aside a {
+	color: #600;
+	font: bold;
+	text-decoration: none;
 }
 
 /***************************************************************************/
